tests/sources/invalid/strings/string_length_arg_count.fire
// Semantic error: string 'length' method takes no arguments.

fn string_length_arg_count() -> void {
    s: string = "hello";
    n: int32 = s.length(1);  //~ ERROR FS-SEM-0010 @18
}
